# backend/internal/app/handlers/user.go
@@ -29,6 +29,7 @@ func (h *UserHandler) SetupLogger(log *zap.Logger) {
 func (h *UserHandler) RegisterRoutes(e *echo.Group) {
 	rg := e.Group("/users", h.middlewares.VerifyTokenMiddleware())
 	rg.GET("/me", h.getMe)
+	rg.GET("/me/settings", h.getMeSettings)
 }
 
 func (h *UserHandler) getMe(c echo.Context) error {
@@ -40,4 +41,13 @@ func (h *UserHandler) getMe(c echo.Context) error {
 	user.Password = ""
 
 	return c.JSON(http.StatusOK, user)
+}
+
+func (h *UserHandler) getMeSettings(c echo.Context) error {
+	userID := c.Get("userID").(uuid.UUID)
+	settings, err := h.us.ListSettings(userID)
+	if err != nil {
+		return c.JSON(http.StatusInternalServerError, err.Error())
+	}
+	return c.JSON(http.StatusOK, settings)
 }
